personalização do portfólio incompleta

--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="logo">
             <img class="icone" src="assets/images/goku_ico.png" alt="Logo">
-            <span class="titulo">Portfólio do Goku</span>
+            <span class="titulo">Portfólio da Letícia</span>
         </div>
 
         <ul>
@@ -33,14 +33,14 @@
                     <div class="campos-form">
                         <label for="nome">Nome:</label>
                         <input onkeyup="validarNome()" id="nome" name="nome" type="text"
-                            placeholder="Insira o seu nome completo">
+                            placeholder="Insira o seu nome completo.">
                         <div id="txtNome"></div>
                     </div>
 
                     <div class="campos-form">
                         <label for="email">E-mail:</label>
                         <input onkeyup="validarEmailRegEx()" id="email" name="email" type="text"
-                            placeholder="Insira o seu e-mail">
+                            placeholder="Insira o seu e-mail.">
                         <div id="txtEmail"></div>
                     </div>
 
@@ -64,7 +64,7 @@
             <div class="endereco">
                 <div class="campos-form">
                     <label for="cep">CEP:</label>
-                    <input id="cep" name="cep" type="text" placeholder="Digite o número do CEP">
+                    <input id="cep" name="cep" type="text" placeholder="Digite o número do CEP: ">
                     <div id="txtCep"></div>
                 </div>
                 <button onclick="consultarCep()" type="button" >
@@ -83,16 +83,13 @@
     <footer>
         <div class="redes_sociais">
             <a href="http://linkedin.com" target="_blank">
-                <img class="icons" src="assets/images/linkedin.png" alt="Linkedin">
+                <img class="icons" src="assets/images/free-linkedin-67-433325.webp" alt="Linkedin">
             </a>
             <a href="http://github.com" target="_blank">
-                <img class="icons" src="assets/images/github.png" alt="Github">
-            </a>
-            <a href="http://instagram.com" target="_blank">
-                <img class="icons" src="assets/images/instagram.png" alt="Instagram">
+                <img class="icons" src="assets/images/free-github-163-761603.webp" alt="Github">
             </a>
         </div>
-        <p class="by">Desenvolvido por: Rafael Queiróz - 2023 &copy;</p>
+        <p class="by">Desenvolvido por Letícia Oliveira de Jesus - 2023 &copy;</p>
     </footer>
     <script src="./assets/js/script.js"></script>
 </body>
