--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="logo">
             <img class="icone" src="assets/images/goku_ico.png" alt="Logo">
-            <span class="titulo">Portfólio do Letícia</span>
+            <span class="titulo">Portfólio da Letícia</span>
         </div>
 
         <ul>
@@ -30,40 +30,23 @@
         <h1 id="perfil">Sobre mim:</h1>
         <section id="sobre">
             <div class="texto_sobre">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores architecto modi voluptates
-                    perspiciatis? Quasi magnam totam veniam incidunt rerum delectus, perspiciatis sunt ab! At
-                    repellendus voluptatibus earum recusandae nihil distinctio consequatur! Eum ducimus repellat eius
-                    voluptate repudiandae numquam facere laudantium nesciunt optio beatae? Numquam accusamus laudantium
-                    tempora enim optio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores architecto modi voluptates
-                    perspiciatis? Quasi magnam totam veniam incidunt rerum delectus, perspiciatis sunt ab! At
-                    repellendus voluptatibus earum recusandae nihil distinctio consequatur! Eum ducimus repellat eius
-                    voluptate repudiandae numquam facere laudantium nesciunt optio beatae? Numquam accusamus laudantium
-                    tempora enim optio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores architecto modi voluptates
-                    perspiciatis? Quasi magnam totam veniam incidunt rerum delectus, perspiciatis sunt ab! At
-                    repellendus voluptatibus earum recusandae nihil distinctio consequatur! Eum ducimus repellat eius
-                    voluptate repudiandae numquam facere laudantium nesciunt optio beatae? Numquam accusamus laudantium
-                    tempora enim optio.</p>
+                <p>Minha experiência profissional começou como auxiliar de Logística autônoma, onde tive a oportunidade de aprimorar minhas habilidades de comunicação e trabalho em equipe. Finalizei essa atividade quando iniciei o bootcamp "Pessoa Desenvolvedora Java" da Generation Brasil e o segundo semestre da faculdade de Sistemas de Informação na Unip. Durante essa trajetória acadêmica, venho desenvolvendo habilidades técnicas como Python, HTML, CSS, JavaScript, MySQL, Java, Git e GitHub, Spring, React e Metodologia SCRUM. Além disso, obtive certificação de Inglês Avançado no nível Upper B2 pelo FCE e certificação de Espanhol Avançado no nível C1 pela SIELE.</p>
             </div>
             <img class="foto" src="assets/images/IMG_0073.jpg" alt="Olá, eu sou a Letícia">
         </section>
         <h1 id="video">Vídeo:</h1>
         <section id="meu_video">
-            <h2>Pitch Pessoal</h2>
-            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/EzN5SW2QOWY"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <h2>Pitch pessoal</h2>
+            <iframe class="video" <iframe width="942" height="530" src="https://www.youtube.com/embed/bbxvICmrqOY" title="Pitch (apresentação pessoal) - Letícia Oliveira (por favor, leia a descrição)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></iframe>
         </section>
     </main>
 
     <footer>
         <div class="redes_sociais">
-            <a href="http://linkedin.com" target="_blank">
+            <a href="http://linkedin.com/in/leticiaj" target="_blank">
                 <img class="icons" src="assets/images/free-linkedin-67-433325.webp" alt="Linkedin">
             </a>
-            <a href="http://github.com" target="_blank">
+            <a href="http://github.com/leticiaoj" target="_blank">
                 <img class="icons" src="assets/images/free-github-163-761603.webp" alt="Github">
             </a>
         </div>
